test/negative/metal_no_hxrt_reflection_boundary/Main.hx
class Main {
	static function main() {
		var payload = {name: "metal"};
		var value = Reflect.field(payload, "name");
		if (value == null) {}
	}
}
